include/vision/vision_ui_item.h

typedef struct vision_ui_notification_t {
    const char* content;
    uint16_t span;

    float y_notification;
    float y_notification_trg;

    float w_notification;
    float w_notification_trg;

    bool is_running;
    uint32_t time_start;
    uint32_t time;
    bool is_dismissing;
    uint32_t dismiss_start;
    const char* pending_content;
    uint16_t pending_span;
    bool has_pending;
} vision_ui_notification_t;
typedef struct vision_ui_alert_t {
    const char* content;
    uint16_t span;

    float y_alert;
    float y_alert_trg;

    float w_alert;
    float w_alert_trg;

    bool is_running;
    uint32_t time_start;
    uint32_t time;
} vision_ui_alert_t;
typedef enum {
    ListItem,
    TitleItem,
    IconItem,
    SwitchItem,
    SliderItem,
    UserItem,
} vision_ui_list_item_type_t;
typedef struct vision_ui_list_item_t {
    vision_ui_list_item_type_t type;
    bool icon_view_mode;

    const char* content;
    uint32_t text_scroll_anchor;

    float scroll_bar_top;
    float scroll_bar_top_velocity;
    float scroll_bar_top_trg;
    float scroll_bar_height;
    float scroll_bar_height_velocity;
    float scroll_bar_height_trg;
    float scroll_bar_scale_part;
    float scroll_bar_scale_part_trg;
    int16_t scroll_bar_top_px;
    int16_t scroll_bar_height_px;

    float y_list_item;
    float y_list_item_trg;

    float icon_scroll_offset;
    float icon_scroll_offset_velocity;
    float icon_scroll_offset_trg;

    uint8_t layer;
    uint8_t child_num;
    size_t capacity;
    struct vision_ui_list_item_t** child_list_item;
    struct vision_ui_list_item_t* parent;
} vision_ui_list_item_t;
typedef struct vision_ui_selector_t {
    float y_selector;
    float y_selector_velocity;
    float y_selector_trg;

    float w_selector;
    float w_selector_velocity;
    float w_selector_trg;

    float h_selector;
    float h_selector_velocity;
    float h_selector_trg;

    uint8_t selected_index;
    vision_ui_list_item_t* selected_item;

    vision_ui_list_item_t* scroll_bar_scale_parent;
    float scroll_bar_scale_part_shared;

    // selection change deferred until exit动画结束，避免场景提前切换导致闪烁
    bool has_pending_selection;
    uint8_t pending_selected_index;
    vision_ui_list_item_t* pending_selected_item;
} vision_ui_selector_t;
typedef struct vision_ui_camera_t {
    float x_camera;
    float x_camera_velocity;
    float x_camera_trg;

    float y_camera;
    float y_camera_velocity;
    float y_camera_trg;
    vision_ui_selector_t* selector;
} vision_ui_camera_t;
typedef enum { VisionAllocMalloc, VisionAllocCalloc, VisionAllocFree } vision_alloc_op_t;
extern void vision_ui_allocator_set(void* (*allocator)(vision_alloc_op_t op, size_t size, size_t count, void* ptr));
extern const vision_ui_notification_t* vision_ui_notification_instance_get();
extern vision_ui_notification_t* vision_ui_notification_mutable_instance_get();
extern void vision_ui_notification_push(const char* content, uint16_t span);
extern const vision_ui_alert_t* vision_ui_alert_instance_get();
extern vision_ui_alert_t* vision_ui_alert_mutable_instance_get();
extern void vision_ui_alert_push(const char* content, uint16_t span);
extern vision_ui_list_item_t* vision_ui_list_icon_item_new(
        size_t capacity,
        const uint8_t* icon,
        const char* title,
        const char* description
);
extern vision_ui_list_item_t* vision_ui_list_switch_item_new(
        const char* content,
        bool default_value,
        void (*on_changed)(bool value)
);
extern vision_ui_list_item_t* vision_ui_list_slider_item_new(
        const char* content,
        int16_t default_value,
        uint8_t step,
        int16_t min,
        int16_t max,
        void (*on_changed)(int16_t value)
);
extern vision_ui_list_item_t* vision_ui_list_user_item_new(
        const char* content,
        void (*init_function)(),
        void (*loop_function)(),
        void (*exit_function)()
);
extern bool vision_ui_root_item_set(vision_ui_list_item_t* item);
extern vision_ui_list_item_t* vision_ui_root_list_get();
extern bool vision_ui_list_push_item(vision_ui_list_item_t* parent, vision_ui_list_item_t* child);
extern const vision_ui_selector_t* vision_ui_selector_instance_get();
extern vision_ui_selector_t* vision_ui_selector_mutable_instance_get();
extern bool vision_ui_selector_t_selector_bind_item(vision_ui_list_item_t* item);
extern void vision_ui_selector_go_next_item();
extern void vision_ui_selector_go_prev_item();
extern void vision_ui_selector_jump_to_selected_item();
extern void vision_ui_selector_exit_current_item();
extern const vision_ui_camera_t* vision_ui_camera_instance_get();
extern vision_ui_camera_t* vision_ui_camera_mutable_instance_get();
extern void vision_ui_camera_instance_x_trg_set(float x_trg);
extern void vision_ui_camera_instance_y_trg_set(float y_trg);
extern void vision_ui_camera_bind_selector(vision_ui_selector_t* selector);