bindings/rust/native/include/vision/vision_ui_core.h

/**
 * Destroys a UI instance and any library-owned items created for it.
 *
 * If `ui` was created by `vision_ui_create()`, this also frees the UI object itself. If `ui` was initialized with
 * `vision_ui_init()`, the caller still owns the storage for the struct.
 *
 * @param ui UI instance to destroy, or `NULL` to do nothing.
 */
extern void vision_ui_destroy(vision_ui_t* ui);