bindings/rust/src/bindings.rs

    #[doc = " Creates a selectable icon card, optionally with child items.\n\n @param ui UI instance whose allocator and ownership list should be used. Must not be `NULL`.\n @param capacity Maximum number of direct child items this icon item can hold.\n @param icon Borrowed monochrome bitmap pointer stored on the item. The pointed-to bitmap should remain valid while\n the item is in use.\n @param title Borrowed NUL-terminated title string stored on the item. The pointed-to string should remain valid\n while the item is in use.\n @param description Borrowed NUL-terminated description string stored on the item. The pointed-to string should remain\n valid while the item is in use.\n @return A non-`NULL` item on success, or `NULL` when allocating the item or its child array fails."]
    pub fn vision_ui_list_icon_item_new(
        ui: *const vision_ui_t,
        capacity: usize,
        icon: *const u8,
        title: *const ::std::os::raw::c_char,
        description: *const ::std::os::raw::c_char,
    ) -> *mut vision_ui_list_item_t;
    #[doc = " Creates a switch row whose callback runs when the value changes.\n\n @param ui UI instance whose allocator and ownership list should be used. Must not be `NULL`.\n @param content Borrowed NUL-terminated label string stored on the item. The pointed-to string should remain valid\n while the item is in use.\n @param default_value Initial switch value.\n @param on_changed Optional callback invoked after the switch value changes.\n @param user_data Borrowed callback context pointer stored on the item. The pointed-to data should remain valid while\n the item is in use.\n @return A non-`NULL` item on success, or `NULL` when allocating the item fails."]
    pub fn vision_ui_list_switch_item_new(
        ui: *const vision_ui_t,
        content: *const ::std::os::raw::c_char,
        default_value: bool,
        on_changed: vision_ui_switch_changed_cb,
        user_data: *mut ::std::os::raw::c_void,
    ) -> *mut vision_ui_list_item_t;
    #[doc = " Creates a numeric slider row.\n\n @param ui UI instance whose allocator and ownership list should be used. Must not be `NULL`.\n @param content Borrowed NUL-terminated label string stored on the item. The pointed-to string should remain valid\n while the item is in use.\n @param default_value Initial slider value.\n @param step Slider step size used when the value changes.\n @param min Minimum slider value.\n @param max Maximum slider value.\n @param on_changed Optional callback invoked after the slider value changes.\n @param user_data Borrowed callback context pointer stored on the item. The pointed-to data should remain valid while\n the item is in use.\n @return A non-`NULL` item on success, or `NULL` when allocating the item fails."]
    pub fn vision_ui_list_slider_item_new(
        ui: *const vision_ui_t,
        content: *const ::std::os::raw::c_char,
        default_value: i16,
        step: u8,
        min: i16,
        max: i16,
        on_changed: vision_ui_slider_changed_cb,
        user_data: *mut ::std::os::raw::c_void,
    ) -> *mut vision_ui_list_item_t;
    #[doc = " Creates a full-screen user scene that takes over drawing while selected.\n\n @param ui UI instance whose allocator and ownership list should be used. Must not be `NULL`.\n @param content Borrowed NUL-terminated label string stored on the item. The pointed-to string should remain valid\n while the item is in use.\n @param init_function Optional callback run the first time the user item becomes active.\n @param loop_function Optional callback run every frame while the user item is active.\n @param exit_function Optional callback run when leaving the user item.\n @param user_data Borrowed callback context pointer shared by the scene callbacks. The pointed-to data should remain\n valid while the item is in use.\n @return A non-`NULL` item on success, or `NULL` when allocating the item fails."]
    pub fn vision_ui_list_user_item_new(
        ui: *const vision_ui_t,
        content: *const ::std::os::raw::c_char,
        init_function: vision_ui_scene_cb,
        loop_function: vision_ui_scene_cb,
        exit_function: vision_ui_scene_cb,
        user_data: *mut ::std::os::raw::c_void,
    ) -> *mut vision_ui_list_item_t;
    #[doc = " Sets the root list displayed by the UI.\n\n @param ui UI instance to configure. Must not be `NULL`.\n @param item Root list item to attach by pointer. The item is not copied.\n @return `true` when `item` was accepted, or `false` when `item` is `NULL`.\n\n @note If `item` was created with Vision UI item constructors for the same `ui`, `vision_ui_destroy()` will release\n it later as part of the UI-owned item tree."]
    pub fn vision_ui_root_item_set(ui: *mut vision_ui_t, item: *mut vision_ui_list_item_t) -> bool;
    pub fn vision_ui_root_list_get(ui: *const vision_ui_t) -> *mut vision_ui_list_item_t;
    #[doc = " Appends a child item to a parent list container.\n\n @param ui UI instance whose selector/camera state may be updated. Must not be `NULL`.\n @param parent Parent list container that will receive the child by pointer. The child is not copied.\n @param child Child item to append by pointer.\n @return `true` on success. Returns `false` when `parent` or `child` is `NULL`, when `parent` is already full, when\n the maximum nesting layer would be exceeded, or when an icon-view parent receives a non-icon child."]
    pub fn vision_ui_list_push_item(
        ui: *mut vision_ui_t,
        parent: *mut vision_ui_list_item_t,
        child: *mut vision_ui_list_item_t,
    ) -> bool;
    pub fn vision_ui_selector_instance_get(ui: *const vision_ui_t) -> *const vision_ui_selector_t;
    pub fn vision_ui_selector_mutable_instance_get(
        ui: *mut vision_ui_t,
    ) -> *mut vision_ui_selector_t;
    pub fn vision_ui_selector_t_selector_bind_item(
        ui: *mut vision_ui_t,
        item: *mut vision_ui_list_item_t,
    ) -> bool;
    pub fn vision_ui_selector_go_next_item(ui: *mut vision_ui_t);
    pub fn vision_ui_selector_go_prev_item(ui: *mut vision_ui_t);
    pub fn vision_ui_selector_jump_to_selected_item(ui: *mut vision_ui_t);
    pub fn vision_ui_selector_exit_current_item(ui: *mut vision_ui_t);
    pub fn vision_ui_camera_instance_get(ui: *const vision_ui_t) -> *const vision_ui_camera_t;
    pub fn vision_ui_camera_mutable_instance_get(ui: *mut vision_ui_t) -> *mut vision_ui_camera_t;
    pub fn vision_ui_camera_instance_x_trg_set(ui: *mut vision_ui_t, x_trg: f32);
    pub fn vision_ui_camera_instance_y_trg_set(ui: *mut vision_ui_t, y_trg: f32);
    pub fn vision_ui_camera_bind_selector(
        ui: *mut vision_ui_t,
        selector: *mut vision_ui_selector_t,
    );
    pub fn vision_ui_exit_animation_render(ui: *mut vision_ui_t, delta_ms: f32);
    pub fn vision_ui_enter_animation_render(ui: *mut vision_ui_t, delta_ms: f32);
    pub fn vision_ui_widget_render(ui: *mut vision_ui_t);
    pub fn vision_ui_list_render(ui: *mut vision_ui_t);
    pub fn vision_ui_notification_instance_get(
        ui: *const vision_ui_t,
    ) -> *const vision_ui_notification_t;
    pub fn vision_ui_notification_mutable_instance_get(
        ui: *mut vision_ui_t,
    ) -> *mut vision_ui_notification_t;
    #[doc = " Shows a transient notification bar for the given duration in milliseconds.\n\n If another notification is already running, the new message is queued as the pending replacement.\n\n @param ui UI instance that owns the notification state. Must not be `NULL`.\n @param content Borrowed NUL-terminated message string used for layout and rendering. The pointed-to string should\n remain valid while the notification is visible or pending.\n @param span Display duration in milliseconds."]
    pub fn vision_ui_notification_push(
        ui: *mut vision_ui_t,
        content: *const ::std::os::raw::c_char,
        span: u16,
    );
    pub fn vision_ui_alert_instance_get(ui: *const vision_ui_t) -> *const vision_ui_alert_t;
    pub fn vision_ui_alert_mutable_instance_get(ui: *mut vision_ui_t) -> *mut vision_ui_alert_t;
    #[doc = " Shows a centered alert for the given duration in milliseconds.\n\n @param ui UI instance that owns the alert state. Must not be `NULL`.\n @param content Borrowed NUL-terminated message string used for layout and rendering. The pointed-to string should\n remain valid while the alert is visible.\n @param span Display duration in milliseconds."]
    pub fn vision_ui_alert_push(
        ui: *mut vision_ui_t,
        content: *const ::std::os::raw::c_char,
        span: u16,
    );
    #[doc = " Built-in list icon pack used by the simulator and default renderer setup."]
    pub static mut DEFAULT_LIST_ICON: vision_ui_icon_t;
    #[doc = " Replaces the active list icon pack.\n\n @param ui UI instance to configure. Must not be `NULL`.\n @param icon Icon bitmap pack to store by value.\n\n @note The struct is copied by value, but any bitmap pointers inside it remain borrowed and should stay valid while\n the icon pack is active."]
    pub fn vision_ui_list_icon_set(ui: *mut vision_ui_t, icon: vision_ui_icon_t);
    pub fn vision_ui_list_icon_get_current(ui: *const vision_ui_t) -> vision_ui_icon_t;
}
